log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
      - name: shared-image
        emptyDir: {}
      containers:
      - name: log-output-server
        image: iritmaximus/log-output-server@sha256:7a7ee3d5ccb5c6f0a936536b90993651113678fb295753136d2e6a5f221ac866
        volumeMounts:
        - name:
          mountPath: /usr/src/app/files
      - name: log-output-file
        image: iritmaximus/log-output-file@sha256:e3421bb36e29fcf6f4cb921aaa91c17730b7026f062a3d55f498e05aec0f2a65
        volumeMounts:
        - name:
          mountPath: /usr/src/app/files
